# ComfyUI-XENodes

./: .gitignore  LICENSE  README.md  __init__.py  modern_switch.py  multi_switch.py  pyproject.toml
.github/workflows/: publish_action.yml
nodes/: combo_selector.py  dynamic_combo_selector.py  fast_groups_muter_bypasser.py  multi_pipe.py  multi_switch.py  pipe.py  save_audio.py  save_hdr_image.py  save_hdr_video.py  save_image.py  save_ultrahdr.py  save_video.py  show_any.py  show_text.py  slider.py  slider2d.py
utils/: audio.py  color.py  metadata.py  video.py
web/js/: combo_selector.js  dynamic_combo_selector.js  fast_groups_muter_bypasser.js  modern_switch.js  multi_pipe.js  multi_switch.js  pipe.js  save_audio.js  save_hdr_image.js  save_hdr_video.js  save_image.js  save_video.js  show_any.js  show_text.js  slider.js  slider2d.js
web/js/patches/: ogg_patch.js  quota_fix.js
