[project]
name = "xenodes"
description = "A collection of custom nodes for ComfyUI, featuring Multi-Switch, Slider, Slider 2D, Save Image, Save Video, and Dynamic Combo Selector nodes."
version = "1.1.0"
license = { file = "LICENSE" }
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = []

[project.urls]
Repository = "https://github.com/xeinherjer-dev/ComfyUI-XENodes"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/xeinherjer-dev/ComfyUI-XENodes/wiki"
"Bug Tracker" = "https://github.com/xeinherjer-dev/ComfyUI-XENodes/issues"

[tool.comfy]
PublisherId = "xeinherjer-dev"
DisplayName = "XENodes"
Icon = ""
includes = []
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

